--- a/app/src/main/res/drawable/gradient_spinner_selectprogram.xml
+++ b/app/src/main/res/drawable/gradient_spinner_selectprogram.xml
@@ -6,13 +6,13 @@
 
             <item>
                 <shape>
-                    <stroke android:width="@dimen/_1sdp" android:color="@color/colorPrimary" />
-                    <corners android:radius="@dimen/_20sdp" />
-                    <padding android:bottom="@dimen/_3sdp" android:left="@dimen/_10sdp" android:right="@dimen/_1sdp" android:top="@dimen/_1sdp" />
+                    <stroke android:width="@dimen/_1sdp" android:color="@color/colorPrimaryDark" />
+                    <corners android:radius="@dimen/_10sdp" />
+                    <padding android:bottom="@dimen/_2sdp" android:left="@dimen/_1sdp" android:right="@dimen/_7sdp" android:top="@dimen/_2sdp" />
                 </shape>
             </item>
 
-            <item android:right="@dimen/_20sdp">
+            <item android:start="@dimen/_20sdp">
                 <bitmap android:gravity="end" android:src="@drawable/arrowdown"/>
             </item>
         </layer-list>
