--- a/app/src/main/res/layout/select_village_dialog.xml
+++ b/app/src/main/res/layout/select_village_dialog.xml
@@ -29,7 +29,7 @@
         <TextView
             android:id="@+id/txt_clear_changes_village"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/_40sdp"
             android:layout_margin="10dp"
             android:layout_weight="1"
             android:background="@drawable/btn_style"
@@ -42,7 +42,7 @@
         <TextView
             android:id="@+id/txt_ok_village"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/_40sdp"
             android:layout_margin="10dp"
             android:layout_weight="1"
             android:background="@drawable/btn_style"
