--- a/app/src/main/res/layout/fragment_notification.xml
+++ b/app/src/main/res/layout/fragment_notification.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/notification_layout"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.pratham.admin.ui.notification.NotificationFragment"
     android:background="@color/screen_background">
