--- a/app/src/main/res/layout/fragment_notification.xml
+++ b/app/src/main/res/layout/fragment_notification.xml
@@ -47,17 +47,15 @@
         android:layout_below="@+id/tv_label"/>
 
 
-
-
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_notiHolder"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_below="@+id/et_search"
         android:layout_marginStart="@dimen/_10sdp"
         android:layout_marginTop="@dimen/_15sdp"
         android:layout_marginEnd="@dimen/_10sdp"
-        android:layout_marginBottom="@dimen/_10sdp"
-        android:layout_below="@+id/et_search"/>
+        android:layout_marginBottom="@dimen/_10sdp" />
 
     <TextView
         android:id="@+id/tv_noDataFound"
