--- a/app/src/main/res/layout/fragment_add_new_tablet.xml
+++ b/app/src/main/res/layout/fragment_add_new_tablet.xml
@@ -7,6 +7,7 @@
     android:layout_marginStart="@dimen/_10sdp"
     android:layout_marginTop="@dimen/_10sdp"
     android:layout_marginEnd="@dimen/_10sdp"
+    android:background="@color/screen_background"
     tools:context=".ui.blockLeader.home.AddNewTablet.AddNewTabletFragment">
 
     <ImageView
@@ -38,14 +39,48 @@
     <FrameLayout
         android:id="@+id/barcode_frame"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/_150sdp"
+        android:layout_height="@dimen/_140sdp"
         android:layout_below="@+id/tv_label" />
+
+    <RelativeLayout
+        android:id="@+id/rl_serialNum"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/_32sdp"
+        android:layout_below="@id/barcode_frame">
+
+        <TextView
+            android:id="@+id/tv_enterSerailNum"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="@dimen/_5sdp"
+            android:fontFamily="@font/glacialindifferencebold"
+            android:text="Unable To Scan? Click to Enter Serial No. Manually"
+            android:textAlignment="center"
+            android:gravity="center"
+            android:visibility="visible" />
+
+        <EditText
+            android:id="@+id/et_enterSerialNum"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="@dimen/_7sdp"
+            android:background="@drawable/rounded_border"
+            android:drawableEnd="@drawable/ic_navigate_next_purple_48"
+            android:drawablePadding="@dimen/_5sdp"
+            android:fontFamily="@font/glacialindifferenceregular"
+            android:hint="Enter Serial No. "
+            android:paddingStart="@dimen/_15sdp"
+            android:paddingTop="@dimen/_3sdp"
+            android:paddingBottom="@dimen/_3sdp"
+            android:visibility="gone"/>
+
+    </RelativeLayout>
 
     <RelativeLayout
         android:id="@+id/rl_spinnerParent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/barcode_frame"
+        android:layout_below="@+id/rl_serialNum"
         android:layout_marginTop="@dimen/_10sdp"
         android:background="@drawable/rounded_filled"
         android:padding="@dimen/_5sdp"
@@ -58,7 +93,7 @@
             android:layout_marginStart="@dimen/_5sdp"
             android:layout_marginTop="@dimen/_5sdp"
             android:layout_marginEnd="@dimen/_5sdp"
-            android:layout_marginBottom="@dimen/_5sdp"
+            android:layout_marginBottom="@dimen/_7sdp"
             android:orientation="horizontal"
             android:weightSum="3">
 
@@ -70,29 +105,24 @@
                 android:layout_marginEnd="@dimen/_5sdp"
                 android:layout_weight="1"
                 android:background="@drawable/custom_spinner_whitebg"
-                android:visibility="visible"/>
+                android:visibility="visible" />
 
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/textInputLayout_donor"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            <EditText
+                android:id="@+id/et_donor"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_marginEnd="@dimen/_10sdp"
                 android:layout_weight="1"
-                android:visibility="gone">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/et_donor"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:background="@color/White"
-                    android:fontFamily="@font/glacialindifferenceregular"
-                    android:hint="Donor"
-                    android:maxLines="1"
-                    android:singleLine="true" />
-            </com.google.android.material.textfield.TextInputLayout>
-
+                android:background="@color/White"
+                android:ellipsize="end"
+                android:fontFamily="@font/glacialindifferenceregular"
+                android:hint="Add New Donor"
+                android:maxLines="1"
+                android:paddingStart="@dimen/_3sdp"
+                android:paddingLeft="@dimen/_3sdp"
+                android:textSize="@dimen/_10sdp"
+                android:visibility="gone"
+                tools:ignore="RtlSymmetry" />
 
             <Spinner
                 android:id="@+id/spinner_vendor"
@@ -101,7 +131,26 @@
                 android:layout_height="@dimen/_30sdp"
                 android:layout_marginEnd="@dimen/_5sdp"
                 android:layout_weight="1"
-                android:background="@drawable/custom_spinner_whitebg" />
+                android:background="@drawable/custom_spinner_whitebg"
+                android:visibility="visible"/>
+
+            <EditText
+                android:id="@+id/et_vendor"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_marginEnd="@dimen/_10sdp"
+                android:layout_weight="1"
+                android:background="@color/White"
+                android:ellipsize="end"
+                android:fontFamily="@font/glacialindifferenceregular"
+                android:hint="Add New Vendor"
+                android:maxLines="1"
+                android:paddingStart="@dimen/_3sdp"
+                android:paddingLeft="@dimen/_3sdp"
+                android:textSize="@dimen/_10sdp"
+                android:visibility="gone"
+                tools:ignore="RtlSymmetry" />
+
 
             <Spinner
                 android:id="@+id/spinner_yearOfPurchase"
@@ -115,89 +164,70 @@
         <LinearLayout
             android:id="@+id/ll_brandModel"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/_30sdp"
             android:layout_below="@id/ll_spinnerOne"
             android:layout_marginStart="@dimen/_10sdp"
             android:layout_marginEnd="@dimen/_10sdp"
             android:orientation="horizontal"
             android:weightSum="2">
 
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/textInputLayout_brand"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            <Spinner
+                android:id="@+id/spinner_brand"
+                style="@style/spinner_style_new"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_marginEnd="@dimen/_5sdp"
+                android:layout_weight="1"
+                android:background="@drawable/custom_spinner_whitebg"
+                android:visibility="visible"/>
+
+            <EditText
+                android:id="@+id/et_brand"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_marginEnd="@dimen/_10sdp"
-                android:layout_weight="1">
+                android:layout_weight="1"
+                android:background="@color/White"
+                android:ellipsize="end"
+                android:fontFamily="@font/glacialindifferenceregular"
+                android:hint="Add New Brand"
+                android:maxLines="1"
+                android:paddingStart="@dimen/_3sdp"
+                android:paddingLeft="@dimen/_3sdp"
+                android:textSize="@dimen/_10sdp"
+                android:visibility="gone"
+                tools:ignore="RtlSymmetry" />
 
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/et_brand"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:background="@color/White"
-                    android:fontFamily="@font/glacialindifferenceregular"
-                    android:hint="Brand"
-                    android:maxLines="1"
-                    android:singleLine="true" />
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/textInputLayout_model"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            <Spinner
+                android:id="@+id/spinner_model"
+                style="@style/spinner_style_new"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
+                android:layout_marginEnd="@dimen/_5sdp"
+                android:layout_weight="1"
+                android:background="@drawable/custom_spinner_whitebg"
+                android:visibility="visible"/>
 
-                android:layout_weight="1">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/et_model"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:background="@color/White"
-                    android:fontFamily="@font/glacialindifferenceregular"
-                    android:hint="Model"
-                    android:maxLines="1"
-                    android:singleLine="true" />
-            </com.google.android.material.textfield.TextInputLayout>
+            <EditText
+                android:id="@+id/et_model"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_marginEnd="@dimen/_10sdp"
+                android:layout_weight="1"
+                android:background="@color/White"
+                android:ellipsize="end"
+                android:fontFamily="@font/glacialindifferenceregular"
+                android:hint="Add New Model"
+                android:maxLines="1"
+                android:paddingStart="@dimen/_3sdp"
+                android:paddingLeft="@dimen/_3sdp"
+                android:textSize="@dimen/_10sdp"
+                android:visibility="gone"
+                tools:ignore="RtlSymmetry" />
 
         </LinearLayout>
-        <!--        <LinearLayout
-                    android:id="@+id/ll_spinnerTwo"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/ll_spinnerOne"
-                    android:orientation="horizontal"
-                    android:weightSum="2">
-
-                    <Spinner
-                        android:id="@+id/spinner_yearOfPurchase"
-                        style="@style/spinner_style"
-                        android:layout_width="0dp"
-                        android:layout_height="@dimen/_30sdp"
-                        android:layout_marginEnd="@dimen/_10sdp"
-                        android:layout_weight="1"
-                        android:background="@drawable/gradient_spinner_selectprogram" />
-
-                    <Spinner
-                        android:id="@+id/spinner_programm"
-                        style="@style/spinner_style"
-                        android:layout_width="0dp"
-                        android:layout_height="@dimen/_30sdp"
-                        android:layout_weight="1"
-                        android:background="@drawable/gradient_spinner_selectprogram" />
-                </LinearLayout>-->
     </RelativeLayout>
 
-    <!--        <TextView
-                android:id="@+id/tv_serialNo"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:background="@drawable/roundedcornerbtn"
-                android:text="Serial No."
-                android:fontFamily="@font/glacialindifferenceregular"
-                android:gravity="center_vertical"
-                android:paddingStart="@dimen/_7sdp"/>-->
     <ListView
         android:id="@+id/lv_newTabs"
         android:layout_width="match_parent"
