--- a/app/src/main/res/layout/fragment_tab_holder.xml
+++ b/app/src/main/res/layout/fragment_tab_holder.xml
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.blockLeader.tabHolders.TabHolderFragment"
-    android:background="@color/screen_background">
+    android:background="@color/screen_background"
+    tools:context=".ui.blockLeader.tabHolders.TabHolderFragment">
 
-<!--    <ImageView
-        android:id="@+id/iv_refresh"
-        android:layout_width="@dimen/_20sdp"
-        android:layout_height="@dimen/_20sdp"
-        android:src="@drawable/ic_round_refresh_48"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="@dimen/_10sdp"
-        android:layout_marginEnd="@dimen/_10sdp"
-        android:visibility="gone"/>-->
+    <!--    <ImageView
+            android:id="@+id/iv_refresh"
+            android:layout_width="@dimen/_20sdp"
+            android:layout_height="@dimen/_20sdp"
+            android:src="@drawable/ic_round_refresh_48"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="@dimen/_10sdp"
+            android:layout_marginEnd="@dimen/_10sdp"
+            android:visibility="gone"/>-->
 
     <TextView
         android:id="@+id/tv_label"
@@ -34,16 +34,16 @@
         android:id="@+id/et_search"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_4sdp"
+        android:layout_below="@+id/tv_label"
         android:layout_marginLeft="@dimen/_8sdp"
+        android:layout_marginTop="@dimen/_4sdp"
         android:layout_marginRight="@dimen/_8sdp"
-        android:padding="@dimen/_5sdp"
+        android:background="@drawable/rectangular_search_bg"
         android:drawableLeft="@drawable/ic_search_grey_24dp"
         android:drawablePadding="@dimen/_5sdp"
-        android:hint="Search"
         android:fontFamily="@font/glacialindifferenceregular"
-        android:background="@drawable/rectangular_search_bg"
-        android:layout_below="@+id/tv_label"/>
+        android:hint="Search"
+        android:padding="@dimen/_5sdp" />
 
     <LinearLayout
         android:id="@+id/ll_spinnerOne"
@@ -51,11 +51,11 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/et_search"
         android:layout_marginStart="@dimen/_10sdp"
-        android:layout_marginEnd="@dimen/_10sdp"
         android:layout_marginTop="@dimen/_15sdp"
+        android:layout_marginEnd="@dimen/_10sdp"
         android:orientation="horizontal"
-        android:weightSum="2"
-        android:visibility="gone">
+        android:visibility="gone"
+        android:weightSum="2">
 
         <Spinner
             android:id="@+id/spinner_program"
@@ -64,7 +64,7 @@
             android:layout_height="@dimen/_30sdp"
             android:layout_marginEnd="@dimen/_20sdp"
             android:layout_weight="1"
-            android:background="@drawable/gradient_spinner_selectprogram"/>
+            android:background="@drawable/gradient_spinner_selectprogram" />
 
         <Spinner
             android:id="@+id/spinner_state"
@@ -72,7 +72,7 @@
             android:layout_width="0dp"
             android:layout_height="@dimen/_30sdp"
             android:layout_weight="1"
-            android:background="@drawable/gradient_spinner_selectprogram"/>
+            android:background="@drawable/gradient_spinner_selectprogram" />
     </LinearLayout>
 
     <LinearLayout
@@ -81,8 +81,8 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/ll_spinnerOne"
         android:layout_marginStart="@dimen/_10sdp"
-        android:layout_marginEnd="@dimen/_10sdp"
         android:layout_marginTop="@dimen/_15sdp"
+        android:layout_marginEnd="@dimen/_10sdp"
         android:orientation="horizontal"
         android:weightSum="2">
 
@@ -94,7 +94,7 @@
             android:layout_marginEnd="@dimen/_20sdp"
             android:layout_weight="1"
             android:background="@drawable/gradient_spinner_selectprogram"
-            android:entries="@array/block"/>
+            android:entries="@array/block" />
 
         <Spinner
             android:id="@+id/spinner_tabHolder"
@@ -102,64 +102,71 @@
             android:layout_width="0dp"
             android:layout_height="@dimen/_30sdp"
             android:layout_weight="1"
-            android:background="@drawable/gradient_spinner_selectprogram"/>
+            android:background="@drawable/gradient_spinner_selectprogram" />
     </LinearLayout>
 
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/btn_go"
+    <LinearLayout
+        android:id="@+id/ll_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/ll_spinnerTwo"
-        android:layout_marginTop="@dimen/_5sdp"
-        android:layout_marginStart="@dimen/_20sdp"
-        android:layout_marginEnd="@dimen/_20sdp"
-        android:fontFamily="@font/glacialindifferencebold"
-        android:shadowRadius="5"
-        android:text="GO"
-        android:textSize="@dimen/_10sdp"
-        android:textColor="@color/White"
-        app:backgroundTint="@color/button_purple"
-        app:cornerRadius="@dimen/_25sdp"
-        app:elevation="@dimen/_10sdp" />
+        android:weightSum="2">
 
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/btn_allocate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/btn_go"
-        android:layout_alignParentRight="true"
-        android:layout_marginStart="@dimen/_20sdp"
-        android:layout_marginTop="@dimen/_5sdp"
-        android:layout_marginEnd="@dimen/_20sdp"
-        android:fontFamily="@font/glacialindifferencebold"
-        android:shadowRadius="5"
-        android:text="Allocate"
-        android:textColor="@color/White"
-        android:textSize="@dimen/_10sdp"
-        app:backgroundTint="@color/button_purple"
-        app:cornerRadius="@dimen/_5sdp"
-        app:elevation="@dimen/_10sdp" />
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btn_go"
+            android:layout_width="0dp"
+            android:layout_height="@dimen/_35sdp"
+            android:layout_marginStart="@dimen/_20sdp"
+            android:layout_marginTop="@dimen/_5sdp"
+            android:layout_marginEnd="@dimen/_20sdp"
+            android:fontFamily="@font/glacialindifferencebold"
+            android:shadowRadius="5"
+            android:text="GO"
+            android:textColor="@color/White"
+            android:textSize="@dimen/_10sdp"
+            app:backgroundTint="@color/button_purple"
+            app:cornerRadius="@dimen/_15sdp"
+            app:elevation="@dimen/_10sdp"
+            android:layout_weight="1"/>
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btn_allocate"
+            android:layout_width="0dp"
+            android:layout_height="@dimen/_35sdp"
+            android:layout_marginStart="@dimen/_20sdp"
+            android:layout_marginTop="@dimen/_5sdp"
+            android:layout_marginEnd="@dimen/_20sdp"
+            android:fontFamily="@font/glacialindifferencebold"
+            android:shadowRadius="5"
+            android:text="Allocate"
+            android:textColor="@color/White"
+            android:textSize="@dimen/_10sdp"
+            app:backgroundTint="@color/button_purple"
+            app:cornerRadius="@dimen/_15sdp"
+            app:elevation="@dimen/_10sdp"
+            android:layout_weight="1"/>
+    </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_tabHolder"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_below="@+id/ll_button"
         android:layout_marginStart="@dimen/_10sdp"
         android:layout_marginTop="@dimen/_15sdp"
         android:layout_marginEnd="@dimen/_10sdp"
-        android:layout_marginBottom="@dimen/_10sdp"
-        android:layout_below="@+id/btn_allocate"/>
+        android:layout_marginBottom="@dimen/_10sdp" />
 
     <TextView
         android:id="@+id/tv_noDataFound"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/btn_allocate"
+        android:layout_below="@+id/ll_button"
+        android:fontFamily="@font/glacialindifferencebold"
+        android:gravity="center"
         android:text="@string/no_data_found"
         android:textColor="@color/red"
         android:textSize="@dimen/_20sdp"
-        android:fontFamily="@font/glacialindifferencebold"
-        android:gravity="center"
-        android:visibility="gone"/>
+        android:visibility="gone" />
 
 </RelativeLayout>
