--- a/app/src/main/res/drawable/rounded_corner_whitebg.xml
+++ b/app/src/main/res/drawable/rounded_corner_whitebg.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="#ffffff" />
-<!--    <stroke
+    <stroke
         android:width="@dimen/_2sdp"
-        android:color="#d1c4e9"/>-->
+        android:color="#d1c4e9"/>
     <corners android:radius="@dimen/_15sdp" />
 </shape>
