--- a/app/src/main/res/layout/fragment_add_new_tablet.xml
+++ b/app/src/main/res/layout/fragment_add_new_tablet.xml
@@ -228,16 +228,17 @@
         </LinearLayout>
     </RelativeLayout>
 
-    <ListView
-        android:id="@+id/lv_newTabs"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_newTabs"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="@dimen/_10sdp"
+        android:layout_marginBottom="@dimen/_10sdp"
         android:layout_above="@+id/btn_addToInventory"
         android:layout_below="@+id/rl_spinnerParent"
-        android:layout_marginTop="@dimen/_5sdp"
-        android:layout_marginBottom="@dimen/_5sdp"
-        android:background="@drawable/rounded_border"
-        android:padding="@dimen/_5sdp" />
+        android:padding="@dimen/_10sdp"
+        android:background="@drawable/rounded_corner_whitebg"/>
+
 
     <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
         android:id="@+id/btn_addToInventory"
